2.3/service_ng_mt_NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc
spec:
  type: NodePort
  selector:
    app: nginx-multitool
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      nodePort: 30080      
    - name: multitool
      protocol: TCP
      port: 8080
      nodePort: 30081
